--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>愿邓总早日康复！！！</h1>
-    <a href="image/dqq.jpg">邓总靓照。。。</a>
+
+    <div align="center">
+
+        <h1>愿邓总早日康复！！！</h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <a href="image/dqq.jpg">邓总靓照。。。</a>
+
+    </div>
 </body>
 </html>
