--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <div align="center">
 
-        <h1>愿邓总早日康复！！！</h1>
+        <h1><font size="15" face="arial" color="red">愿邓总早日康复！！！</font></h1>
         <h1></h1>
         <h1></h1>
         <h1></h1>
-        <a href="image/dqq.jpg">邓总靓照。。。</a>
+        <a href="image/dqq.jpg"><font size="10" face="arial" color="red">邓总靓照。。。</font></a>
 
     </div>
 </body>
