--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <h1></h1>
         <h1></h1>
         <h1></h1>
-        <a href="image/dqq.jpg"><font size="10" face="arial" color="red">邓总靓照。。。</font></a>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <a href="image/dqq.jpg"><font size="10">邓总靓照。。。求点击！</font></a>
 
     </div>
 </body>
